welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not found: value liMessage
for (i<- 0 to lar) { var dec = 0;gauche();avance();droite();dec = liMessage().toInt;
                                                                  ^